--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "argument": "0.0.2",
     "asynch": "^0.5.2",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
